Display sub-traits on races
